# excelschema

./: .gitignore  README.md  pyproject.toml
excelschema/: __init__.py  constraint.py  core.py  exception.py  util.py
